continue on production_nomen and clean code.

--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -252,6 +252,7 @@ arb:
         # fallow_land: "Jachère"
         # fish_farming: "Aquaculture"
         # fodder_crops: "Culture fourragères"
+        # fruits_crops: "Cultures fruitières"
         # goat_farming: "Élevage caprins"
         # handicraft: "Artisanat"
         # maize_crops: "Culture de maïs"
@@ -1450,6 +1451,7 @@ arb:
           # credit_card: "Carte de crédit"
           # desktop: "Ordinateur"
           # drop: "Goutte"
+          # fish: "Poisson"
           # food: "Aliment"
           # gift: "Cadeau"
           # group: "Groupe"
@@ -1488,6 +1490,7 @@ arb:
         # female_adult_cow: "Vache"
         # female_young_cow: "Génisse"
         # fertilizer: "Engrais"
+        # fish_band: "Poisson"
         # fruit: "Fruit"
         # fuel: "Gasoil"
         # gas: "Essence"
@@ -1502,6 +1505,7 @@ arb:
         # milk: "Lait"
         # natural_water: "Eau de pluie / puit"
         # other_consumable: "Autres consommables"
+        # oyster_band: "Huître"
         # plant: "Plant"
         # plant_medicine: "Produit phytosanitaire"
         # running_water: "Eau du réseau"
@@ -1622,6 +1626,7 @@ arb:
         # fallow_crop: "Jachère"
         # female_adult_cattle_herd: "Troupeau de vache laitière"
         # female_adult_cow: "Vache"
+        # female_hen_band: "Bande de poule"
         # female_young_cow: "Génisse"
         # flap_silt_land_parcel: "Parcelle de limons battants"
         # forager: "Ensileuse"
@@ -1641,6 +1646,7 @@ arb:
         # hard_wheat_straw: "Paille de blé dur"
         # hard_wheat_straw_bales: "Bottes de paille de blé dur"
         # hay_rake: "Andaineur"
+        # hazel_crop: "Culture de noisettier"
         # helianthus_herbicide: "Herbicide tournesol"
         # hen_compost: "Compost de poule"
         # hen_guano: "Guano de poule"
@@ -1656,6 +1662,7 @@ arb:
         # land_parcel_cluster: "Îlot"
         # lentil_crop: "Culture de lentille"
         # male_adult_cow: "Taureau"
+        # male_hen_band: "Bande de poulet"
         # male_young_cow: "Taurillon"
         # manager: "Responsable"
         # manual_implanter: "Plantoir"
@@ -1677,6 +1684,7 @@ arb:
         # other_herbicide: "Herbicide autre"
         # ovis_compost: "Compost d’ovin"
         # ovis_manure: "Fumier d’ovin"
+        # oyster_band: "Bande d'huître"
         # pea_crop: "Culture de pois"
         # pea_seed: "Semence de pois"
         # permanent_meadow_crop: "Culture de prairie permanente"
@@ -1695,6 +1703,7 @@ arb:
         # riflexine: "Riflexine"
         # running_water: "Eau du réseau"
         # rye_crop: "Culture de seigle"
+        # salmon_band: "Bande de saumon"
         # sand_land_parcel: "Parcelle sableuse"
         # sandy_clay_land_parcel: "Parcelle argilo-sableuse"
         # sandy_clay_loam_land_parcel: "Parcelle limono-argileuse"
@@ -1736,6 +1745,7 @@ arb:
         # vine_grape_berry: "Grappe de raisin"
         # vine_grape_crop: "Culture de vigne"
         # vine_grape_must: "Mout de raisin"
+        # walnut_crop: "Culture de noyer"
         # wheat_crop: "Culture de blé"
         # wheat_grain: "Graine de blé"
         # wheat_seed_25: "Semence de blé 25kg"
@@ -1802,6 +1812,7 @@ arb:
         # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
+        # hen_band: "Bande de gallinacé"
         # herbicide: "Herbicide"
         # implanter: "Planteuse"
         # insecticide: "Insecticide"
@@ -1820,9 +1831,11 @@ arb:
         # mower: "Faucheuse"
         # natural_water: "Eau de pluie ou de puit"
         # organic_fertilizer: "Engrais organique"
+        # oyster_band: "Bande d'huître"
         # plow: "Charrue"
         # reaper: "Moissonneuse-batteuse"
         # running_water: "Eau du réseau"
+        # salmon_band: "Bande de saumon"
         # seed: "Semence"
         # small_equipment: "Petit matériel"
         # sower: "Semoir"
@@ -1836,6 +1849,7 @@ arb:
         # tractor: "Tracteur"
         # trailer: "Remorque"
         # usual_vine_seedling: "Plant de vigne traditionnel"
+        # walnut_crop: "Culture d'arbre à coques"
         # wine: "Vin"
         # wine_crop: "Vigne"
         # wine_tank: "Cuve à vin"
@@ -1849,21 +1863,29 @@ arb:
       choices: #?
       items:
         # annual_frost_fallow_land: "Gel annuel"
+        # apple: "Pomme"
         # asparagus: "Asperge"
         # bean: "Haricot"
         # beet: "Betterave"
         # calf: "Veau"
         # carrot: "Carotte"
+        # chicken: "Poulet"
+        # duck: "Canard"
         # escourgeon_barley: "Orge escourgeon"
         # garlic: "Ail"
         # grain_corn: "Maïs grain"
+        # hazel: "Noisettier"
         # horsebean: "Féverolle"
+        # laying_hen: "Poule pondeuse"
         # lentil: "Lentille"
         # milk_bull_calf: "Taurillons Lait"
         # milk_cattle: "Bovins Lait"
+        # oyster: "Huître"
         # permanent_meadow: "Prairie permanente"
+        # plum: "Prune"
         # potato: "Pomme de terre"
         # rye: "Seigle"
+        # salmon: "Saumon"
         # seed_corn: "Maïs semence"
         # silage_corn: "Maïs ensilage"
         # sorghum: "Sorgho"
@@ -1877,6 +1899,7 @@ arb:
         # temporary_meadow: "Prairie temporaire"
         # triticale: "Triticale"
         # vine: "Vigne"
+        # walnut: "Noyer"
         # wine_storehouse: "Cave"
         # winery: "Chai"
         # winter_barley: "Orge d’hiver"
@@ -2059,6 +2082,7 @@ arb:
         # baler: "Botteleuse"
         # bambusa: "Bambou"
         # beta: "Betterave"
+        # betulaceae: "Betulaceae"
         # biensur: "Biensur"
         # bioproduct: "Produit vivant"
         # black_valley_soil: "Terres noires de vallées"
@@ -2086,6 +2110,7 @@ arb:
         # clay_soil: "Terre d’argile lourde"
         # colombar_blanc: "Colombar blanc"
         # compost: "Compost"
+        # corylus: "Corylus"
         # cot_noir: "Cot noir"
         # courtot: "Courtot"
         # cultivable_zone: "Zone cultivable"
@@ -2093,6 +2118,7 @@ arb:
         # daucus: "Carotte"
         # disinfectant: "Désinfectant"
         # easement: "Aménagement foncier"
+        # egg: "Oeuf"
         # electricity: "Electricité"
         # equipment: "Équipement"
         # equus: "Equin"
@@ -2135,6 +2161,8 @@ arb:
         # insecta: "Insecte"
         # insecticide: "Produit insecticide"
         # isengrain: "Isengrain"
+        # juglandaceae: "Juglandaceae"
+        # juglans: "Juglans"
         # karur: "Karur"
         # land_parcel: "Parcelle physique"
         # land_parcel_cluster: "Îlot"
@@ -2170,6 +2198,7 @@ arb:
         # organic_matter: "Matière organique"
         # oryza: "Riz"
         # osteichthyes: "Poissons osseux"
+        # ostreidae: "Ostreidae"
         # ovis: "Ovin"
         # pescadou: "Pescadou"
         # petit_verdot_noir: "Petit verdot noir"
@@ -2248,6 +2277,7 @@ arb:
         # vicia: "Vesces - Féverolle"
         # vitis: "Vigne"
         # vitis_vinifera: "Vitis vinifera"
+        # walnut: "Noyer"
         # water: "Eau"
         # wine: "Vin"
         # worker: "Travailleur"
