--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -308,6 +308,7 @@ eng:
         # fallow_land: "Jachère"
         # fish_farming: "Aquaculture"
         # fodder_crops: "Culture fourragères"
+        # fruits_crops: "Cultures fruitières"
         # goat_farming: "Élevage caprins"
         # handicraft: "Artisanat"
         # maize_crops: "Culture de maïs"
@@ -1537,6 +1538,7 @@ eng:
           # credit_card: "Carte de crédit"
           # desktop: "Ordinateur"
           # drop: "Goutte"
+          # fish: "Poisson"
           # food: "Aliment"
           # gift: "Cadeau"
           # group: "Groupe"
@@ -1575,6 +1577,7 @@ eng:
         # female_adult_cow: "Vache"
         # female_young_cow: "Génisse"
         # fertilizer: "Engrais"
+        # fish_band: "Poisson"
         # fruit: "Fruit"
         # fuel: "Gasoil"
         # gas: "Essence"
@@ -1589,6 +1592,7 @@ eng:
         # milk: "Lait"
         # natural_water: "Eau de pluie / puit"
         # other_consumable: "Autres consommables"
+        # oyster_band: "Huître"
         # plant: "Plant"
         # plant_medicine: "Produit phytosanitaire"
         # running_water: "Eau du réseau"
@@ -1709,6 +1713,7 @@ eng:
         # fallow_crop: "Jachère"
         # female_adult_cattle_herd: "Troupeau de vache laitière"
         # female_adult_cow: "Vache"
+        # female_hen_band: "Bande de poule"
         # female_young_cow: "Génisse"
         # flap_silt_land_parcel: "Parcelle de limons battants"
         # forager: "Ensileuse"
@@ -1728,6 +1733,7 @@ eng:
         # hard_wheat_straw: "Paille de blé dur"
         # hard_wheat_straw_bales: "Bottes de paille de blé dur"
         # hay_rake: "Andaineur"
+        # hazel_crop: "Culture de noisettier"
         # helianthus_herbicide: "Herbicide tournesol"
         # hen_compost: "Compost de poule"
         # hen_guano: "Guano de poule"
@@ -1743,6 +1749,7 @@ eng:
         # land_parcel_cluster: "Îlot"
         # lentil_crop: "Culture de lentille"
         # male_adult_cow: "Taureau"
+        # male_hen_band: "Bande de poulet"
         # male_young_cow: "Taurillon"
         # manager: "Responsable"
         # manual_implanter: "Plantoir"
@@ -1764,6 +1771,7 @@ eng:
         # other_herbicide: "Herbicide autre"
         # ovis_compost: "Compost d’ovin"
         # ovis_manure: "Fumier d’ovin"
+        # oyster_band: "Bande d'huître"
         # pea_crop: "Culture de pois"
         # pea_seed: "Semence de pois"
         # permanent_meadow_crop: "Culture de prairie permanente"
@@ -1782,6 +1790,7 @@ eng:
         # riflexine: "Riflexine"
         # running_water: "Eau du réseau"
         # rye_crop: "Culture de seigle"
+        # salmon_band: "Bande de saumon"
         # sand_land_parcel: "Parcelle sableuse"
         # sandy_clay_land_parcel: "Parcelle argilo-sableuse"
         # sandy_clay_loam_land_parcel: "Parcelle limono-argileuse"
@@ -1823,6 +1832,7 @@ eng:
         # vine_grape_berry: "Grappe de raisin"
         # vine_grape_crop: "Culture de vigne"
         # vine_grape_must: "Mout de raisin"
+        # walnut_crop: "Culture de noyer"
         # wheat_crop: "Culture de blé"
         # wheat_grain: "Graine de blé"
         # wheat_seed_25: "Semence de blé 25kg"
@@ -1905,6 +1915,7 @@ eng:
         # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
+        # hen_band: "Bande de gallinacé"
         # herbicide: "Herbicide"
         # implanter: "Planteuse"
         # insecticide: "Insecticide"
@@ -1923,9 +1934,11 @@ eng:
         # mower: "Faucheuse"
         # natural_water: "Eau de pluie ou de puit"
         # organic_fertilizer: "Engrais organique"
+        # oyster_band: "Bande d'huître"
         # plow: "Charrue"
         # reaper: "Moissonneuse-batteuse"
         # running_water: "Eau du réseau"
+        # salmon_band: "Bande de saumon"
         # seed: "Semence"
         # small_equipment: "Petit matériel"
         # sower: "Semoir"
@@ -1940,6 +1953,7 @@ eng:
         trail: "Trail" #?
         # trailer: "Remorque"
         # usual_vine_seedling: "Plant de vigne traditionnel"
+        # walnut_crop: "Culture d'arbre à coques"
         wheat_crop: "Wheat crop" #?
         # wine: "Vin"
         # wine_crop: "Vigne"
@@ -1957,27 +1971,35 @@ eng:
         animal_farming: "Animal farming" #?
         animal_global_documentation: "Animal global documentation" #?
         # annual_frost_fallow_land: "Gel annuel"
+        # apple: "Pomme"
         # asparagus: "Asperge"
         # bean: "Haricot"
         # beet: "Betterave"
         # calf: "Veau"
         # carrot: "Carotte"
+        # chicken: "Poulet"
+        # duck: "Canard"
         # escourgeon_barley: "Orge escourgeon"
         feeding: "Feeding" #?
         # garlic: "Ail"
         # grain_corn: "Maïs grain"
+        # hazel: "Noisettier"
         # horsebean: "Féverolle"
         identification: "Identification" #?
         land_parcel_management: "Land parcel management" #?
+        # laying_hen: "Poule pondeuse"
         # lentil: "Lentille"
         marketing: "Marketing" #?
         # milk_bull_calf: "Taurillons Lait"
         # milk_cattle: "Bovins Lait"
+        # oyster: "Huître"
         # permanent_meadow: "Prairie permanente"
+        # plum: "Prune"
         # potato: "Pomme de terre"
         production: "Production" #?
         reproduction: "Reproduction" #?
         # rye: "Seigle"
+        # salmon: "Saumon"
         sanitary: "Sanitary" #?
         # seed_corn: "Maïs semence"
         # silage_corn: "Maïs ensilage"
@@ -1997,6 +2019,7 @@ eng:
         vegetal_global_documentation: "Vegetal global documentation" #?
         # vine: "Vigne"
         vinification: "Vinification" #?
+        # walnut: "Noyer"
         # wine_storehouse: "Cave"
         # winery: "Chai"
         # winter_barley: "Orge d’hiver"
@@ -2179,6 +2202,7 @@ eng:
         # baler: "Botteleuse"
         # bambusa: "Bambou"
         # beta: "Betterave"
+        # betulaceae: "Betulaceae"
         # biensur: "Biensur"
         bioproduct: "Bioproduct"
         # black_valley_soil: "Terres noires de vallées"
@@ -2206,6 +2230,7 @@ eng:
         # clay_soil: "Terre d’argile lourde"
         # colombar_blanc: "Colombar blanc"
         # compost: "Compost"
+        # corylus: "Corylus"
         # cot_noir: "Cot noir"
         # courtot: "Courtot"
         # cultivable_zone: "Zone cultivable"
@@ -2213,6 +2238,7 @@ eng:
         # daucus: "Carotte"
         # disinfectant: "Désinfectant"
         # easement: "Aménagement foncier"
+        # egg: "Oeuf"
         # electricity: "Electricité"
         equipment: "Equipment"
         # equus: "Equin"
@@ -2255,6 +2281,8 @@ eng:
         # insecta: "Insecte"
         # insecticide: "Produit insecticide"
         # isengrain: "Isengrain"
+        # juglandaceae: "Juglandaceae"
+        # juglans: "Juglans"
         # karur: "Karur"
         # land_parcel: "Parcelle physique"
         # land_parcel_cluster: "Îlot"
@@ -2290,6 +2318,7 @@ eng:
         organic_matter: "Organic matter"
         # oryza: "Riz"
         # osteichthyes: "Poissons osseux"
+        # ostreidae: "Ostreidae"
         # ovis: "Ovin"
         # pescadou: "Pescadou"
         # petit_verdot_noir: "Petit verdot noir"
@@ -2369,6 +2398,7 @@ eng:
         # vicia: "Vesces - Féverolle"
         # vitis: "Vigne"
         # vitis_vinifera: "Vitis vinifera"
+        # walnut: "Noyer"
         # water: "Eau"
         # wine: "Vin"
         worker: "Worker"
