--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -255,6 +255,7 @@ fra:
         fallow_land: "Jachère"                             # vegetal_crops
         fish_farming: "Aquaculture"                        # animal_farming
         fodder_crops: "Culture fourragères"                # vegetal_crops
+        fruits_crops: "Cultures fruitières"                # vegetal_crops
         goat_farming: "Élevage caprins"                    # animal_farming
         handicraft: "Artisanat"
         maize_crops: "Culture de maïs"                     # vegetal_crops
@@ -1849,6 +1850,7 @@ fra:
           credit_card: "Carte de crédit"
           desktop: "Ordinateur"
           drop: "Goutte"
+          fish: "Poisson"
           food: "Aliment"
           gift: "Cadeau"
           group: "Groupe"
@@ -1889,6 +1891,7 @@ fra:
         female_adult_cow: "Vache"
         female_young_cow: "Génisse"
         fertilizer: "Engrais"
+        fish_band: "Poisson"
         fruit: "Fruit"
         fuel: "Gasoil"
         gas: "Essence"
@@ -1903,6 +1906,7 @@ fra:
         milk: "Lait"
         natural_water: "Eau de pluie / puit"
         other_consumable: "Autres consommables"
+        oyster_band: "Huître"
         plant: "Plant"
         plant_medicine: "Produit phytosanitaire"
         running_water: "Eau du réseau"
@@ -2026,6 +2030,7 @@ fra:
         fallow_crop: "Jachère"
         female_adult_cattle_herd: "Troupeau de vache laitière"
         female_adult_cow: "Vache"
+        female_hen_band: "Bande de poule"
         female_young_cow: "Génisse"
         flap_silt_land_parcel: "Parcelle de limons battants"
         forager: "Ensileuse"
@@ -2045,6 +2050,7 @@ fra:
         hard_wheat_straw: "Paille de blé dur"
         hard_wheat_straw_bales: "Bottes de paille de blé dur"
         hay_rake: "Andaineur"
+        hazel_crop: "Culture de noisettier"
         helianthus_herbicide: "Herbicide tournesol"
         hen_compost: "Compost de poule"
         hen_guano: "Guano de poule"
@@ -2060,6 +2066,7 @@ fra:
         land_parcel_cluster: "Îlot"
         lentil_crop: "Culture de lentille"
         male_adult_cow: "Taureau"
+        male_hen_band: "Bande de poulet"
         male_young_cow: "Taurillon"
         manager: "Responsable"
         manual_implanter: "Plantoir"
@@ -2082,6 +2089,7 @@ fra:
         other_herbicide: "Herbicide autre"
         ovis_compost: "Compost d’ovin"
         ovis_manure: "Fumier d’ovin"
+        oyster_band: "Bande d'huître"
         pea_crop: "Culture de pois"
         pea_seed: "Semence de pois"
         permanent_meadow_crop: "Culture de prairie permanente"
@@ -2100,6 +2108,7 @@ fra:
         riflexine: "Riflexine"
         running_water: "Eau du réseau"
         rye_crop: "Culture de seigle"
+        salmon_band: "Bande de saumon"
         sand_land_parcel: "Parcelle sableuse"
         sandy_clay_land_parcel: "Parcelle argilo-sableuse"
         sandy_clay_loam_land_parcel: "Parcelle limono-argileuse"
@@ -2141,6 +2150,7 @@ fra:
         vine_grape_berry: "Grappe de raisin"
         vine_grape_crop: "Culture de vigne"
         vine_grape_must: "Mout de raisin"
+        walnut_crop: "Culture de noyer"
         wheat_crop: "Culture de blé"
         wheat_grain: "Graine de blé"
         wheat_seed_25: "Semence de blé 25kg"
@@ -2209,6 +2219,7 @@ fra:
         grape_reaper: "Machine à vendanger"
         grass: "Herbe"
         hay_rake: "Andaineur"
+        hen_band: "Bande de gallinacé"
         herbicide: "Herbicide"
         implanter: "Planteuse"
         insecticide: "Insecticide"
@@ -2227,9 +2238,11 @@ fra:
         mower: "Faucheuse"
         natural_water: "Eau de pluie ou de puit"
         organic_fertilizer: "Engrais organique"
+        oyster_band: "Bande d'huître"
         plow: "Charrue"
         reaper: "Moissonneuse-batteuse"
         running_water: "Eau du réseau"
+        salmon_band: "Bande de saumon"
         seed: "Semence"
         small_equipment: "Petit matériel"
         sower: "Semoir"
@@ -2243,6 +2256,7 @@ fra:
         tractor: "Tracteur"
         trailer: "Remorque"
         usual_vine_seedling: "Plant de vigne traditionnel"
+        walnut_crop: "Culture d'arbre à coques"
         wine: "Vin"
         wine_crop: "Vigne"
         wine_tank: "Cuve à vin"
@@ -2258,21 +2272,29 @@ fra:
         # variant_support: # Choices comes from nomenclature: product_nature_variants
       items:
         annual_frost_fallow_land: "Gel annuel"
+        apple: "Pomme"
         asparagus: "Asperge"
         bean: "Haricot"
         beet: "Betterave"
         calf: "Veau"
         carrot: "Carotte"
+        chicken: "Poulet"
+        duck: "Canard"
         escourgeon_barley: "Orge escourgeon"
         garlic: "Ail"
         grain_corn: "Maïs grain"
+        hazel: "Noisettier"
         horsebean: "Féverolle"
+        laying_hen: "Poule pondeuse"
         lentil: "Lentille"
         milk_bull_calf: "Taurillons Lait"
         milk_cattle: "Bovins Lait"
+        oyster: "Huître"
         permanent_meadow: "Prairie permanente"
+        plum: "Prune"
         potato: "Pomme de terre"
         rye: "Seigle"
+        salmon: "Saumon"
         seed_corn: "Maïs semence"
         silage_corn: "Maïs ensilage"
         sorghum: "Sorgho"
@@ -2286,6 +2308,7 @@ fra:
         temporary_meadow: "Prairie temporaire"
         triticale: "Triticale"
         vine: "Vigne"
+        walnut: "Noyer"
         wine_storehouse: "Cave"
         winery: "Chai"
         winter_barley: "Orge d’hiver"
@@ -2482,6 +2505,7 @@ fra:
         baler: "Botteleuse"                                # equipment
         bambusa: "Bambou"                                  # poaceae
         beta: "Betterave"                                  # amaranthaceae
+        betulaceae: "Betulaceae"                           # plant
         biensur: "Biensur"                                 # triticum_durum
         bioproduct: "Produit vivant"                       # matter
         black_valley_soil: "Terres noires de vallées"      # land_parcel
@@ -2509,6 +2533,7 @@ fra:
         clay_soil: "Terre d’argile lourde"                 # land_parcel
         colombar_blanc: "Colombar blanc"                   # vitis_vinifera
         compost: "Compost"                                 # excrement
+        corylus: "Corylus"                                 # betulaceae
         cot_noir: "Cot noir"                               # vitis_vinifera
         courtot: "Courtot"                                 # triticum_aestivum
         cultivable_zone: "Zone cultivable"                 # land_parcel_group
@@ -2516,6 +2541,7 @@ fra:
         daucus: "Carotte"                                  # apiaceae
         disinfectant: "Désinfectant"                       # antiseptic
         easement: "Aménagement foncier"                    # zone
+        egg: "Oeuf"                                        # organic_matter
         electricity: "Electricité"                         # matter
         equipment: "Équipement"                            # matter
         equus: "Equin"                                     # mammalia
@@ -2558,6 +2584,8 @@ fra:
         insecta: "Insecte"                                 # animal
         insecticide: "Produit insecticide"                 # plant_medicine
         isengrain: "Isengrain"                             # triticum_aestivum
+        juglandaceae: "Juglandaceae"                       # plant
+        juglans: "Juglans"                                 # juglandaceae
         karur: "Karur"                                     # triticum_durum
         land_parcel: "Parcelle physique"                   # easement
         land_parcel_cluster: "Îlot"                        # land_parcel_group
@@ -2593,6 +2621,7 @@ fra:
         organic_matter: "Matière organique"                # matter
         oryza: "Riz"                                       # poaceae
         osteichthyes: "Poissons osseux"                    # animal
+        ostreidae: "Ostreidae"                             # mollusca
         ovis: "Ovin"                                       # mammalia
         pescadou: "Pescadou"                               # triticum_durum
         petit_verdot_noir: "Petit verdot noir"             # vitis_vinifera
@@ -2671,6 +2700,7 @@ fra:
         vicia: "Vesces - Féverolle"                        # fabaceae
         vitis: "Vigne"                                     # plant
         vitis_vinifera: "Vitis vinifera"                   # vitis
+        walnut: "Noyer"                                    # organic_matter
         water: "Eau"                                       # matter
         wine: "Vin"                                        # organic_matter
         worker: "Travailleur"                              # equipment
