--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -574,8 +574,10 @@ jpn:
     # currency_precision: "Nombre de décimales"
     # currency_rate: "Taux de change"
     # current_amount: "Montant actuel"
+    # current_father_link: "Current father link"
     # current_healthy: "Bonne santé actuelle"
     # current_localization: "Current localization"
+    # current_mother_link: "Current mother link"
     # current_net_mass: "Dernière pesée"
     # current_ownership: "Current ownership"
     # current_phase: "Current phase"
@@ -731,7 +733,10 @@ jpn:
     # individual: "Individuel"
     # initial_born_at: "Initial born at"
     # initial_container: "Emplacement initial"
+    # initial_dead_at: "Initial dead at"
     # initial_enjoyer: "Initial enjoyer"
+    # initial_father: "Initial father"
+    # initial_mother: "Initial mother"
     # initial_number: "Numéro initial"
     # initial_owner: "Propriétaire initial"
     # initial_population: "Population initiale"
@@ -780,6 +785,7 @@ jpn:
     # lft: "Limite gauche"
     # linkage_points_list: "Points d’attache"
     # linkages: "Attaches"
+    # links: "Links"
     # listing: "Extraction"
     # local_balance: "Solde"
     # local_count: "Population"
