--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -333,6 +333,7 @@ fra:
       product_indicator_datum: "Valeur d’indicateur"
       # product_junction: "Product junction"
       # product_junction_way: "Product junction way"
+      # product_link: "Product link"
       product_linkage: "Lien entre produits"
       product_localization: "Passage d’un produit en un lieu"
       # product_measurement: "Product measurement"
@@ -520,10 +521,10 @@ fra:
     container: "Contenant"
     content: "Contenu"
     content_indicator: "Content indicator" #?
-    content_indicator_name: "Content indicator name"
-    content_indicator_unit: "Content indicator unit"
-    content_maximal_quantity: "Content maximal quantity"
-    content_nature: "Content nature"
+    content_indicator_name: "Content indicator name" #?
+    content_indicator_unit: "Content indicator unit" #?
+    content_maximal_quantity: "Content maximal quantity" #?
+    content_nature: "Content nature" #?
     contour: "Silhouette" #?
     coordinate: "Coordonnée"
     # coordinate_columns: "Coordinate columns"
@@ -548,8 +549,10 @@ fra:
     currency_precision: "Nombre de décimales"
     currency_rate: "Taux de change"
     current_amount: "Montant actuel"
+    current_father_link: "Current father link"
     current_healthy: "Bonne santé actuelle" #?
     current_localization: "Current localization"
+    current_mother_link: "Current mother link"
     current_net_mass: "Dernière pesée" #?
     current_ownership: "Current ownership"
     current_phase: "Current phase"
@@ -725,7 +728,10 @@ fra:
     individual: "Individuel" #?
     initial_born_at: "Initial born at"
     initial_container: "Emplacement initial"
+    initial_dead_at: "Initial dead at"
     initial_enjoyer: "Initial enjoyer"
+    initial_father: "Initial father"
+    initial_mother: "Initial mother"
     initial_number: "Numéro initial"
     initial_owner: "Propriétaire initial"
     initial_population: "Population initiale"
@@ -781,6 +787,8 @@ fra:
     lft: "Limite gauche"
     linkage_points_list: "Points d’attache"
     linkages: "Attaches"
+    # linked: "Linked"
+    links: "Links"
     listing: "Extraction"
     local_balance: "Solde"
     local_count: "Population"
@@ -1003,7 +1011,7 @@ fra:
     repeatable: "Répétable"
     # reporter: "Reporter"
     required: "Obligatoire"
-    reservoir: "Réservoir"
+    reservoir: "Réservoir" #?
     # reset_password_sent_at: "Reset password sent at"
     # reset_password_token: "Reset password token"
     resource: "Origine"
