--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -2097,11 +2097,11 @@ spa:
         # caphorn: "Blé Caphorn"
         # capra: "Caprin"
         # carignan: "Carignan"
-        # carmenere_noir: "Carmenere noir"
+        # carmenere_noir: "Carménère noir"
         # champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         # chardonnay: "Chardonnay"
         # chemical_fertilizer: "Engrais chimique"
-        # chesnut_red_soil: "Terres rouges à chataigniers"
+        # chesnut_red_soil: "Terres rouges à châtaigniers"
         # cichorium: "Chicoré"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         # clay_soil: "Terre d’argile lourde"
@@ -2141,7 +2141,7 @@ spa:
         # grenache: "Grenache"
         # grenache_noir: "Grenache noir"
         # guano: "Guano"
-        # harvest: "Récolte"
+        # harvester: "Moissonneuse"
         # hay: "Foin"
         # helianthus: "Tournesol"
         # herbicide: "Produit herbicide"
@@ -2235,7 +2235,7 @@ spa:
         # secale: "Secale"
         # seed: "Semence"
         # seedling: "Plant"
-        # semillon_blanc: "Semillon blanc"
+        # semillon_blanc: "Sémillon blanc"
         # service: "Service"
         # settlement: "Agencement"
         # silt_schist_soil: "Limons sur schiste ou gneiss"
@@ -2250,7 +2250,7 @@ spa:
         # sower: "Semoir"
         # sprayer: "Pulvérisateur"
         # spreader: "Épandeur"
-        # straw: "Pailles"
+        # straw: "Paille"
         # sub_zone: "Sous zone"
         # sus: "Porcin"
         # swamp_peaty_soil: "Terre de marais tourbeux"
