--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -16,6 +16,7 @@ arb:
         # germinate: "Germer"
         # grind: "Broyer"
         # harvest: "Récolter"
+        # hoe: "Biner"
         # implant: "Planter"
         # kill: "Tuer"
         # manage: "Gérer"
@@ -32,8 +33,10 @@ arb:
         # store_fluid: "Stocker du vrac solide"
         # store_gaz: "Stocker du gaz"
         # store_liquid: "Stocker du vrac liquide"
+        # superficial_plow: "Travailler le sol superficiellement"
         # take_root: "S’enraciner"
         # tow: "Tracter"
+        # uncompact: "Décompacter"
       # name: "Compétences"
     accounts:
       attributes:
@@ -1379,9 +1382,11 @@ arb:
     plant_life_states:
       items:
         # booting: "Montaison"
+        # development_of_fruit: "Développement du fruit"
         # flowering: "Floraison"
         # germination: "Germination"
         # heading: "Tallage"
+        # leaf_development: "Développement des feuilles"
         # senescence: "Sénescence"
         # tillering: "Tallage"
       # name: "États du développement végétal"
@@ -1404,6 +1409,7 @@ arb:
         # growth_control: "Contrôle de croissance"
         # harvest: "Récolte"
         # haymaking: "Fenaison"
+        # hoeing: "Binage"
         # implant: "Plantation"
         # implantation: "Implantation d’une culture"
         # milk_production: "Production laitière"
@@ -1526,6 +1532,7 @@ arb:
         unit_name:
           # 100g_dose: "dose de 100g"
           # 10ml_dose: "dose de 10ml"
+          # 12kg_bag: "sac de 12kg"
           # 1l_dose: "dose de 1l"
           # 25kg_bag: "sac de 25kg"
           # bag: "sac"
@@ -1552,6 +1559,7 @@ arb:
         # additive: "Adjuvant"
         # alfalfa_crop: "Culture de luzerne"
         # alfalfa_seed: "Semence de luzerne"
+        # all_inclusive_corn_sower: "Semoir Maïs tout intégré"
         # animal_building: "Bâtiment d’accueil pour les animaux"
         # animal_building_division: "Piece d’accueil pour les animaux"
         # animal_food_building_division: "Piece d’accueil pour les aliments"
@@ -1635,6 +1643,7 @@ arb:
         # gasoline: "Essence"
         # goat_milk: "Lait de chèvre"
         # granite_arena_land_parcel: "Parcelle de sol sur arène granitique"
+        # granulated_insecticide_12: "Insecticide granulés"
         # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
         # grass_seed_25: "Semence de prairie sac de 25kg"
@@ -1652,6 +1661,7 @@ arb:
         # hen_guano: "Guano de poule"
         # hen_manure: "Fumier de poule"
         # hen_slurry: "Lisier de poule"
+        # hoe: "Bineuse"
         # horse_manure: "Fumier de cheval"
         # horsebean_crop: "Culture de féverolle"
         # hydromorph_sandy_clay_loam_land_parcel: "Parcelle sablo-argileuse hydromorphe"
@@ -1670,6 +1680,7 @@ arb:
         # merlot_noir_so4_vine_seedling: "Plant de Merlot Noir sur so4"
         # milk_tank: "Tank à lait"
         # mineral_cleaner: "Nettoyant chimique"
+        # mineral_feed_block_25: "Bloc de sel mineral en 25kg"
         # miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
         # miradoux_hard_wheat_seed_25: "Semence de blé dur Miradoux"
         # mixed_chemical_fertilizer: "Mélange d’engrais"
@@ -1789,6 +1800,7 @@ arb:
         # cattle_herd: "Troupeau de bovins"
         # cereal_crop: "Culture de céréales"
         # chemical_fertilizer: "Engrais chimique"
+        # complete_sower: "Semoir équipé"
         # crop: "Culture"
         # cultivable_zone: "Zone cultivable"
         # duck_band: "Bande de canards"
@@ -1814,6 +1826,7 @@ arb:
         # hay_rake: "Andaineur"
         # hen_band: "Bande de gallinacé"
         # herbicide: "Herbicide"
+        # hoe: "Bineuse"
         # implanter: "Planteuse"
         # insecticide: "Insecticide"
         # irrigation_water: "Eau (irrigation)"
