--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -1958,12 +1958,14 @@ fra:
         zone_property_title: "Titre de propriété terrienne"
     intervention:
       reference_name:
+        all_in_one_sowing: "Semis 'tout-en-un'"
         animal_birth: "Naissance d’un animal"
         animal_treatment: "Traitement animal"
         calving_one: "Vêlage unique"
         calving_twin: "Vêlage jumeaux"
         direct_silage: "Ensilage direct"
         grains_harvest: "Moisson"
+        hoeing: "Binage"
         indirect_silage: "Ensilage indirect"
         mammal_herd_milking: "Traite d'un troupeau"
         mammal_milking: "Traite d'un animal"
@@ -1979,7 +1981,7 @@ fra:
         sowing: "Semis"
         spraying_on_cultivation: "Pulvérisation sur culture"
         straw_bunching: "Pressage de fourrages"
-        superficial_plowing: "Hersage"
+        superficial_plowing: "Déchaumage / Décompactage / Préparation du sol"
         vine_plant: "Plantation de vigne"
         wheat_crop: "Culture de blé (standard)"
         wine_transfer: "Transfert de vin"
@@ -2007,6 +2009,7 @@ fra:
         harrow: "Herse"
         implanter_man: "Planteur"
         implanter_tool: "Équipement de plantation"
+        insecticide_to_input: "Insecticide à distribuer"
         land_parcel: "Parcelle"
         mammal: "Animal"
         mammal_herd: "Troupeau à traire"
@@ -2017,6 +2020,7 @@ fra:
         medicine: "Traitement"
         medicine_to_give: "Traitement à donner"
         milk: "Lait"
+        moluscicide_to_input: "Moluscicide à distribuer"
         mother_animal: "Mère"
         mower: "Faucheuse"
         mower_driver: "Conducteur de faucheuse"
@@ -4668,6 +4672,7 @@ fra:
         cattle_herd: "Troupeau de bovins"
         cereal_crop: "Culture de céréales"
         chemical_fertilizer: "Engrais chimique"
+        complete_sower: "Semoir équipé"
         crop: "Culture"
         cultivable_zone: "Zone cultivable"
         duck_band: "Bande de canards"
@@ -4693,6 +4698,7 @@ fra:
         hay_rake: "Andaineur"
         hen_band: "Bande de gallinacé"
         herbicide: "Herbicide"
+        hoe: "Bineuse"
         implanter: "Planteuse"
         insecticide: "Insecticide"
         irrigation_water: "Eau (irrigation)"
