--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -17,6 +17,7 @@ fra:
         germinate: "Germer"
         grind: "Broyer"
         harvest: "Récolter"
+        hoe: "Biner"
         implant: "Planter"
         kill: "Tuer"
         manage: "Gérer"
@@ -33,10 +34,11 @@ fra:
         store_fluid: "Stocker du vrac solide"
         store_gaz: "Stocker du gaz"
         store_liquid: "Stocker du vrac liquide"
-        # superficial_plow: "Superficial plow"
+        superficial_plow: "Travailler le sol superficiellement"
         # swath: "Swath"
         take_root: "S’enraciner"
         tow: "Tracter"
+        uncompact: "Décompacter"
     accounts:
       name: "Comptes comptables"
       attributes:
@@ -1765,11 +1767,11 @@ fra:
       name: "États du développement végétal"
       items:
         booting: "Montaison"
-        # development_of_fruit: "Development of fruit"
+        development_of_fruit: "Développement du fruit"
         flowering: "Floraison"
         germination: "Germination"
         heading: "Tallage"
-        # leaf_development: "Leaf development"
+        leaf_development: "Développement des feuilles"
         # ripening: "Ripening"
         senescence: "Sénescence"
         # stem_elongation: "Stem elongation"
@@ -1798,7 +1800,7 @@ fra:
         growth_control: "Contrôle de croissance"
         harvest: "Récolte"
         haymaking: "Fenaison"
-        # hoeing: "Hoeing"                                 # tillage
+        hoeing: "Binage"                                   # tillage
         implant: "Plantation"                              # implantation
         implantation: "Implantation d’une culture"
         milk_production: "Production laitière"             # animal_production
@@ -1929,6 +1931,7 @@ fra:
         unit_name:
           100g_dose: "dose de 100g"
           10ml_dose: "dose de 10ml"
+          12kg_bag: "sac de 12kg"
           1l_dose: "dose de 1l"
           25kg_bag: "sac de 25kg"
           bag: "sac"
@@ -1956,6 +1959,7 @@ fra:
         additive: "Adjuvant"
         alfalfa_crop: "Culture de luzerne"
         alfalfa_seed: "Semence de luzerne"
+        all_inclusive_corn_sower: "Semoir Maïs tout intégré"
         animal_building: "Bâtiment d’accueil pour les animaux"
         animal_building_division: "Piece d’accueil pour les animaux"
         animal_food_building_division: "Piece d’accueil pour les aliments"
@@ -2039,6 +2043,7 @@ fra:
         gasoline: "Essence"
         goat_milk: "Lait de chèvre"
         granite_arena_land_parcel: "Parcelle de sol sur arène granitique"
+        granulated_insecticide_12: "Insecticide granulés"
         grape_reaper: "Machine à vendanger"
         grass: "Herbe"
         grass_seed_25: "Semence de prairie sac de 25kg"
@@ -2056,6 +2061,7 @@ fra:
         hen_guano: "Guano de poule"
         hen_manure: "Fumier de poule"
         hen_slurry: "Lisier de poule"
+        hoe: "Bineuse"
         horse_manure: "Fumier de cheval"
         horsebean_crop: "Culture de féverolle"
         hydromorph_sandy_clay_loam_land_parcel: "Parcelle sablo-argileuse hydromorphe"
@@ -2074,7 +2080,7 @@ fra:
         merlot_noir_so4_vine_seedling: "Plant de Merlot Noir sur so4"
         milk_tank: "Tank à lait"
         mineral_cleaner: "Nettoyant chimique"
-        # mineral_feed_block_25: "Mineral feed block 25"
+        mineral_feed_block_25: "Bloc de sel mineral en 25kg"
         miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
         miradoux_hard_wheat_seed_25: "Semence de blé dur Miradoux"
         mixed_chemical_fertilizer: "Mélange d’engrais"
@@ -2196,6 +2202,7 @@ fra:
         cattle_herd: "Troupeau de bovins"
         cereal_crop: "Culture de céréales"
         chemical_fertilizer: "Engrais chimique"
+        complete_sower: "Semoir équipé"
         crop: "Culture"
         cultivable_zone: "Zone cultivable"
         duck_band: "Bande de canards"
@@ -2221,6 +2228,7 @@ fra:
         hay_rake: "Andaineur"
         hen_band: "Bande de gallinacé"
         herbicide: "Herbicide"
+        hoe: "Bineuse"
         implanter: "Planteuse"
         insecticide: "Insecticide"
         irrigation_water: "Eau (irrigation)"
