add identifiers and net_services management and clean code.

--- a/config/locales/eng/complement.yml
+++ b/config/locales/eng/complement.yml
@@ -484,6 +484,8 @@ eng:
         ZWL: "Zimbabwe Dollar"
     guide:
 
+    identifier:
+
     immatter:
       variety:
         animal: "Animal"
@@ -793,6 +795,8 @@ eng:
         service: "Service"
         worker: "Worker"
         zone: "Zone"
+    net_service:
+
     operation_task:
 
     person:
