--- a/config/locales/arb/complement.yml
+++ b/config/locales/arb/complement.yml
@@ -341,6 +341,8 @@ arb:
         ZWD: "دولار زمبابوي"
     guide:
 
+    identifier:
+
     immatter:
 
     intervention:
@@ -458,6 +460,8 @@ arb:
     matter:
 
     medicine:
+
+    net_service:
 
     operation_task:
 
