--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1066,6 +1066,11 @@ arb:
         # regulations: "Réglementations"
         # specifications: "Spécifications"
       # name: "Types de guide"
+    identifier_natures:
+      attributes: #?
+      item_lists: #?
+      items: #?
+    identifiers: #?
     indicators:
       attributes:
         # choices: "Choix"
@@ -1325,6 +1330,12 @@ arb:
         # heat: "Chaleur"
         # pregnancy: "Pleine"
       # name: "États de la reproduction mammale"
+    net_services:
+      attributes: #?
+      choices:
+        approach: #?
+        data_acces_method: #?
+      items: #?
     nmp_methods:
       items: #?
     nmp_poitou_charentes_abacus_1: #?
