--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1114,6 +1114,11 @@ eng:
         # regulations: "Réglementations"
         # specifications: "Spécifications"
       # name: "Types de guide"
+    identifier_natures:
+      attributes: #?
+      item_lists: #?
+      items: #?
+    identifiers: #?
     incidents: #?
     indicators:
       attributes:
@@ -1405,6 +1410,12 @@ eng:
         # heat: "Chaleur"
         # pregnancy: "Pleine"
       # name: "États de la reproduction mammale"
+    net_services:
+      attributes: #?
+      choices:
+        approach: #?
+        data_acces_method: #?
+      items: #?
     nmp_methods:
       items: #?
     nmp_poitou_charentes_abacus_1: #?
