--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -280,6 +280,11 @@ fra:
       index: "Aide"
       show: "Voir l’aide"
       toggle: "Basculer l’aide"
+    backend/identifiers:
+      # edit: "Edit backend/identifier"
+      # index: "Index backend/identifier"
+      # new: "New backend/identifier"
+      # show: "Show backend/identifier"
     backend/incoming_deliveries:
       confirm: "Confirmer l’arrivée de l’approvisionnement"
       edit: "Modifier l’approvisionnement: %{number}"
@@ -415,6 +420,11 @@ fra:
       change_password: "Changer de mot de passe" #?
       show: "Mes informations"
       statistics: "Mes statistiques" #?
+    backend/net_services:
+      # edit: "Edit backend/net service"
+      # index: "Index backend/net service"
+      # new: "New backend/net service"
+      # show: "Show backend/net service"
     backend/observations:
       edit: "Modifier une observation"
       new: "Ajouter une observation"
@@ -475,11 +485,6 @@ fra:
       edit: "Modifier la zone postale\_: %{name}"
       index: "Zones postales"
       new: "Nouvelle zone postale"
-    backend/preferences:
-      edit: "Modifier les préférences" #?
-      index: "Préférences"
-      new: "Nouvelle préférence" #?
-      show: "Préférence" #?
     backend/prescriptions:
       edit: "Modifier la prescription\_: %{reference_number}"
       index: "Prescriptions"
@@ -752,6 +757,7 @@ fra:
     # backend/guide_analyses: "Backend/guide analyses"
     # backend/guides: "Backend/guides"
     # backend/helps: "Backend/helps"
+    # backend/identifiers: "Backend/identifiers"
     backend/incoming_deliveries: "Livraisons entrantes"
     backend/incoming_delivery_items: "Lignes de livraison entrante"
     backend/incoming_delivery_modes: "Modes de réception d’arrivage"
@@ -779,6 +785,7 @@ fra:
     backend/medicines: "Médicaments"
     backend/mineral_matters: "Matières minérales"
     backend/myselves: "Mon compte"
+    # backend/net_services: "Backend/net services"
     backend/observations: "Observations"
     backend/operations: "Travaux"
     backend/organic_matters: "Matières organiques"
@@ -791,7 +798,6 @@ fra:
     backend/plant_medicines: "Produits phytosanitaires"
     backend/plants: "Cultures"
     # backend/postal_zones: "Backend/postal zones"
-    backend/preferences: "Préférences"
     # backend/prescriptions: "Backend/prescriptions"
     backend/product_groups: "Groupes de produits"
     # backend/product_indicator_data: "Backend/product indicator data"
