Changes division/merging computations

--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1074,6 +1074,7 @@ arb:
         # unit: "Unité"
       choices:
         choices: #?
+        curve: #?
         datatype:
           # boolean: "Case à cocher"
           # choice: "Liste de choix"
