--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1149,6 +1149,7 @@ eng:
           sick: "Sick" #?
           swelling: "Swelling" #?
           tillering: "Tillering" #?
+        curve: #?
         datatype:
           # boolean: "Case à cocher"
           # choice: "Liste de choix"
