--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -383,6 +383,9 @@ fra:
     absolute_credit: "Absolute credit"
     absolute_currency: "Absolute currency"
     absolute_debit: "Absolute debit"
+    absolute_measure_value: "Absolute measure value"
+    absolute_measure_value_unit: "Absolute measure value unit"
+    absolute_measure_value_value: "Absolute measure value value"
     # absorber: "Absorber"
     # absorber_way: "Absorber way"
     acceptance_status: "Acceptance status"
