--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -425,6 +425,9 @@ spa:
     # absolute_credit: "Absolute credit"
     # absolute_currency: "Absolute currency"
     # absolute_debit: "Absolute debit"
+    # absolute_measure_value: "Absolute measure value"
+    # absolute_measure_value_unit: "Absolute measure value unit"
+    # absolute_measure_value_value: "Absolute measure value value"
     # acceptance_status: "Acceptance status"
     # account: "Compte comptable"
     # account_balances: "Balances de compte"
