--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1071,6 +1071,7 @@ spa:
         # unit: "Unité"
       choices:
         choices: #?
+        curve: #?
         datatype:
           # boolean: "Case à cocher"
           # choice: "Liste de choix"
