--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -983,6 +983,9 @@ arb:
     # absolute_credit: "Absolute credit"
     # absolute_currency: "Absolute currency"
     # absolute_debit: "Absolute debit"
+    # absolute_measure_value: "Absolute measure value"
+    # absolute_measure_value_unit: "Absolute measure value unit"
+    # absolute_measure_value_value: "Absolute measure value value"
     # acceptance_status: "Acceptance status"
     account: "الحساب"
     account_balances: "ارصدة الحسابات"
