--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -575,6 +575,9 @@ eng:
     # absolute_credit: "Absolute credit"
     # absolute_currency: "Absolute currency"
     # absolute_debit: "Absolute debit"
+    # absolute_measure_value: "Absolute measure value"
+    # absolute_measure_value_unit: "Absolute measure value unit"
+    # absolute_measure_value_value: "Absolute measure value value"
     # acceptance_status: "Acceptance status"
     account: "Account"
     account_balances: "Account balances"
